--- a/後期期末1.md
+++ b/後期期末1.md
@@ -1,1 +1,207 @@
 # 回路設計論 2018/12/5
+## 用語の定義
+### ISO/IEC27999:2013
+
+- 資産  
+→ 組織によって価値のあるもの  
+- 脅威  
+→ システムまたは組織に損害を与える可能性のなるインシデントの潜在的な原因  
+- 脆弱性  
+→ 一つ以上の脅威が付け込むことのできる資産または管理策の弱点  
+
+### ISO7498-2
+→ セキュリティとは、資産および資源の脆弱性を最小限にする事
+
+### ISO7498-2:1989による分類
+- 受動的な脅威  
+- 能動的な脅威  
+- 偶発的な脅威  
+- 意図的な脅威  
+
+| 脅威 | 受動的 | 能動的 |
+|:---:|:---:|:---:|
+|**偶発的** |停電 |災害、誤操作削除 |
+|**意図的** |攻撃 |攻撃 |
+
+## 情報セキュリティの3大要素
+
+**1. 機密性  
+2. 完全性  
+3. 可用性**
+<br />
+
+→ **正当な権利を持つ個人や組織が情報や情報システムを意図通り制御できる事**  
+
+## 情報セキュリティとは
+- セキュリティの対象を「情報資産」に特化定義  
+- ISO/IEC27000:2013 2.30の定義:  
+  (情報資産の)機密性、完全性、可用性を示すこと。  
+  真正性、責任追跡性、信頼性、否認防止の特性を含めても良い。  
+  
+**情報セキュリティとは、脆弱性を最小限にすること**  
+  = 機密性、完全性、可用性、真正性、責任追跡性、信頼性、否認防止を維持する事
+  
+## 攻撃の分類
+### 攻撃
+- 意図的に実行される受動的、能動的な脅威  
+→ 資産の破壊、暴露、改ざん、無能力化、盗用もしくは、資産への認可されていないアクセス、認可されていない使用の試み  
+- 攻撃者による分類
+  - 部内者(インサイダー)による攻撃  
+  - 部外者(アウトサイダー)による攻撃  
+- 脆弱性の種類による分類
+  - 論理的な脆弱性に対する攻撃  
+→ 例えば、ソフトウェアのバグを突く攻撃  
+- 物理的な脆弱性に対する攻撃  
+→ 例えば構内への不正侵入  
+- 人的な脆弱性に対する攻撃  
+→ 例えば、「オレオレ詐欺」のような錯誤に基づく攻撃  
+
+## 残留リスク
+- リスク対応の後に残っているリスク  
+→ISO/IEC27000:2013で定義  
+- 残留リスクの大きさ算定が必要  
+→ 算定方法の定義はない  
+→ 定性的、定量的、どちらでもOK  
+
+## 第一章まとめ
+- 資産・脆弱性・脅威・リスク  
+  - なぜセキュリティは必要か  
+  - セキュリティ用語の定義  
+  - 情報資産・脅威・脆弱性・リスク  
+  - 脅威の分類  
+  - リスクとは  
+- 情報セキュリティとは  
+  - 情報セキュリティとは?  
+  → 機密性、完全性、可用性  
+  - 情報セキュリティの定義  
+  - 攻撃の分類  
+  - 管理策またはセーフガード  
+  - 残留リスク  
+- セキュリティ事故の事例  
+
+## 攻撃者の種類
+- ホワイトハットハッカー
+  - 技術を善意に利用するハッカー
+- ブラックハットハッカー (クラッカー)
+  - 技術を悪意に利用するハッカー
+- クラッカー
+  - スクリプトキディ(Script Kiddies)
+  - 産業スパイ
+  - 政治犯、テロリスト、敵対的国家の破壊活動専門官
+
+## 不正アクセスとは
+1. 調査(事前調査)
+2. 発見(権限取得)
+3. 攻撃(不正実行)
+4. 制御(後処理)
+
+## 調査段階の例
+- 物理的な調査
+  - ダンプスターダイビング(トラッキング)
+- 論理的な調査
+  - Webサイトへのアクセス
+  - Whoisサービスの利用
+
+## 発見段階の例
+- 物理的な発見
+  - 入退室の観察
+  - ショルダーサーフィング(スキミング、ショルダーハッキング)
+- 論理的な発見
+  - pingスィープ
+  - ポートスキャン
+    - ポートスキャンの種類
+    - スタックフィンガープリント
+  - スニフィング
+  - Warドライビング、Warチョーキング
+  - Warダイアリング
+  - アプリケーションのバージョンチェック
+  
+## 制御段階の例
+- 論理的な攻撃(乗っ取り)の場合
+  - ユーザーアカウントの作成
+  - バックドアの設置
+  - 情報ストアへのアクセス
+    - DBアクセス
+  - 他のコンピュータへの侵入
+  - サービスの乗っ取り
+  - 不正なサービス起動
+
+## 不正アクセスへの対策
+- ユーザーアカウントの管理
+- セキュリティ機器の導入
+
+## サービス妨害
+- DoS攻撃
+- メール爆弾攻撃
+### 対策方法
+- 機器の増強
+- ファイアウォール
+- ソフトウェアのアップデート
+
+(ぶっちゃけ各クライアントからのアクセス数を一定時間サンプリングたり、ログから正規表現で抜き出して遮断するなどの制御をした方がry()
+
+## マルウェアとアドウェア/アドオン
+- **マルウェア** (malware)  
+→ 悪意を持って動くように作られたプログラムの総称  
+- **アドウェア** (Adware)/アドオン  
+→ プログラムを無償で利用できる代わりに、実行時に強制的に広告を表示させる 
+
+※「**悪意のある**アドウェア/アドオン」は**マルウェア**   
+
+### 事例
+Google Playでトロイの木馬入りのアプリ(審査ガバガバ過ぎでは)  
+- Android向けアプリ2M中290kがマルウェア
+- Androidではウイルス対策ソフトが必須
+
+## ウイルス
+### ウイルスの動作例
+- データ破壊
+- コンピュータの破壊
+- 情報漏洩
+- 攻撃の踏み台
+
+### 主な感染経路
+- 悪意のあるファイル
+- メールの開封・プレビュー
+- ネットワーク経由
+- Web上の悪意あるスクリプト
+
+### 定義
+- 広義のウイルス
+  - 害を加えるプログラムの総称
+    - ワーム
+    - トロイの木馬など
+- 狭義のウイルス
+  - 他のプログラムファイルへの寄生
+  - 自分のコピーの作成
+    - システム領域にとりつくタイプ
+    - プログラムファイルに感染するタイプ
+    - マクロ型ウイルス
+    
+寄生したプログラムが動くことで、ウイルスにコードが実行され感染が広がる
+
+### 種類
+- ワーム
+  - 独立して動作することができる単独のプログラム
+  - ネットワーク上の他のホストに自分の完全な複製を繁殖させることが可能
+  - コンピュータ資源を破壊的に浪費する可能性がある
+- トロイの木馬
+  - 有用な機能を持つように見える
+  - セキュリティメカニズムを回避する
+  - 隠された、潜在的な悪意のある機能を持つ
+    - 増殖しない
+    - RootKitはトロイの木馬として有名 (バックドア作るのに有名)
+  - スパイウェアを含めることがある
+  
+## ソーシャルエンジニアリング
+- 非技術的な攻撃テクニックの総称
+  - 詐欺師のテクニックを使いシステムへの侵入などを試みる
+  - ソーシャルエンジニアリングは「人」の脆弱性を突く
+    - 権威 (Authority) : 人は権威に弱い
+    - 脅迫 (Intimidation) : 人は脅迫に弱い
+    - コンセンサス/社会的証明 (Consensus/Social proof) : 人はコンセンサスに弱い
+    - 希少性 (Scarcity) : 人は希少性に弱い
+    - 緊急性 (Urgenvy) : 人は緊急性に弱い
+    - 精通/好き (Familiarity/liking) : 人は好きなものに弱い
+    - 信頼 : 人は信頼に弱い
+
