--- a/後期期末2.md
+++ b/後期期末2.md
@@ -1,1 +1,167 @@
+# 回路設計論 2018/12/12 コンピュータ基礎
+# 第3章 コンピュータの仕組み
+## コンピュータの5大機能
+**画像準備中**  
+### CPU (Central Processing Unit)
+- 演算装置・制御装置
+- クロックを中心に動作
+- シングルコアCPUとマルチコアCPU
+    - ※**マルチコアCPU**...複数のCPU機能(Core)を持たせ高速化
+- 32ビットCPUと64ビットCPU
+    - 一度に処理できる情報量
+    - 最近は64ビットが主流
 
+### 主記憶装置 (メモリ : RAM Random Access Memory) 
+- 主記憶装置
+    - 「**一時的に**」記憶する = **揮発性**
+- 補助記憶装置
+    - 「**永続的に**」記憶する = **不揮発性**
+<br />
+
+**画像準備中**  
+- **SRAM (Static Ramdom Access Memory)**
+    - 高速、小容量
+    - CPU内のキャッシュメモリ
+- **DRAM (Dynamic Ramdom Access Memory)**
+    - (**SRAMと比較して**)低速、大容量
+    - 主記憶装置。メインメモリ
+
+### 補助記憶装置
+- ハードディスクドライブ (HDD)
+- ソリッドステートドライブ (SSD)
+- CD・DVDドライブ
+- USBメモリ
+
+### HDDの内部構造
+**画像準備中**
+
+### マザーボード
+メモリの差し込み口、CPUソケットなどの様々なインターフェースがある
+
+# 第4章 ハードウェアとソフトウェア
+## 4-1 ハードウェア・ソフトウェアとは
+- ハードウェア (JISでは**金物**)
+    - マザーボード
+    - HDD/SSD
+    - メモリ
+    - CPU
+- ソフトウェア
+    - OS
+    - アプリケーション
+
+### ハードウェア・ソフトウェアの関係
+**画像準備中**
+
+## 4-2 プログラムとプログラミング言語
+### プログラミング言語とは?
+ソフトウェアのシステム等を構築するための言語
+### プログラムを作成するまで
+1. プログラミング言語でソースコードを書く
+2. コンパイラ(翻訳機)を用いてコンパイルし、プログラミング言語を機械語にする
+3. 機械語で実行
+
+### プログラミング言語の種類
+- 低級言語 (機械語寄りの言語)
+    - 機械語
+    - アセンブリ言語
+- 高級言語 (人間よりの言語)
+    - C
+    - C++
+    - Java
+    - Visual Basic
+    - C#
+    - COBOL
+    - PHP
+    - Ruby
+    - Scala
+    - Python
+    - その他色々...
+
+## 4-3 プログラム実行の流れ
+1. 補助記憶装置から主記憶装置へプログラムを読み出し
+2. 主記憶装置で展開
+3. CPUで実行(レジスタ)
+
+**料理を例とすると...**
+1. 保存する場所(冷蔵庫)から食材を取り出す
+2. また板に食材を置く
+3. 人間が調理
+
+### 多段構造の理由
+- 多段構造とは
+    - 不揮発性から揮発性へデーターを読み出し
+    - ビット単価のバランスを取る事で性能を維持
+    - **価格と性能を両立させるための構造**
+
+**画像準備中**
+
+### キャッシュメモリ
+- CPUの構成 (簡易的)
+    - レジスタ
+    - キャッシュメモリ
+        - 容量がかなり小さいため、高速に処理する必要のあるものを保管
+        - 主記憶装置よりも爆速
+
+
+# 第5章 オペレーティングシステム
+## 5-1 オペレーティングシステムとは
+- オペレーティングシステム(OS)の機能
+    - タスク、メモリ、ファイルなど、ハードウェアの機能を効率良く利用
+    - ネットワーク、周辺機器の制御などソフトウェアで必要とする共通の機能を提供
+    - ユーザーインターフェース(UI)の提供
+
+### オペレーティングシステム(OS)  
+- タスク管理
+    - シングルタスク
+    - マルチタスク
+        - 複数のタスクを実行する事
+- メモリ管理
+    - メモリ上のデータを管理(使用していないデータの退避、使用可能領域の管理など)
+- ファイル管理
+    - 様々なファイルシステム
+        - NFTS
+        - FAT
+        - exFAT
+        - APFS
+        - その他色々...
+- 周辺機器の管理
+    - 接続されているデバイスの管理
+- その他
+    - 認証
+    - ファイヤーウォール
+    - ネットワークの管理
+    - などなど
+
+###  32ビットOSと64ビットOS
+- 32ビットOS (x86版)
+    - 理論上、4GBまでの主記憶装置が使用可能
+- 64ビットOS (x64版)
+    - メリット
+        - 一度に多くの情報を扱える (64bit分)
+        - 処理速度の向上
+        - 大容量の主記憶装置の利用 (4GB〜)
+
+## 5-2 OSの種類
+- Linux
+- UNIX
+- macOS
+- Windows
+- Android
+- iOS
+
+## 5-3 ファイルとフォルダ
+### 絶対パスと相対パス
+- 絶対パス
+    - 最上位にあるルートディレクトリ(/)から階層を明示することにより、対象の位置を示すもの
+    - (例)ユーザー名morikapuのデスクトップにあるTweetGet.phpのファイルのパス
+        - /home/morikapu/Desktop/TweetGet.php
+- 相対パス
+    - 現在位置を中心に相対的に表現する方法
+        - 先程の例で、現在の位置がデスクトップの場合
+            - ./TweetGet.php
+
+## 5-4 コマンドプロンプトの操作
+- cd (Change Directory)
+    - 自分の位置を任意のフォルダに移動する
+- dir (Linuxだとls)
+    - 現在位置にあるファイル一覧を出力させる
