--- a/後期期末3.md
+++ b/後期期末3.md
@@ -1,1 +1,12 @@
-
+# 回路設計論 2019/1/9 
+### 研究室説明
+- ネットワークがらみ
+  - 聴覚補助(デジタル補聴器)システムの開発
+  - 設備はそろっている(?)
+- 人間の特性、ヒューマンインタフェース
+  - VR、バーチャル空間で遠隔でロボットを操作する際に反力をネットワークを通して再現。
+  - 触覚: 表面の粗さによりどの位凹凸ならば人間が理解できるか
+  - VR空間上で音の変化
+- 主に人間の認識を調べる研究室?
+- 膨大な実験データを得てまとめる
+# コンピュータ概論
