--- a/後期期末3.md
+++ b/後期期末3.md
@@ -209,3 +209,12 @@ K-COMで使用できる命令
   - マイクロコードROM
     - 各命令の制御手順を記憶するROM
     - 出力が制御信号となり、各回路の入出力ゲートの制御信号となる
+    
+<br/>
+制御論理回路では、上位3 bitの命令コード、フラグ、マイクロコードROMが入力され、クロックに同期して、次の状態がステータスレジスタに出力される。  
+ステータスレジスタの値はデコードさえ、マイクロコードROM内に記憶された制御信号が各回路の入出六ゲートに送られる。  
+
+## 3.6 I/Oポート
+### なにこれ
+- 入力ポートは、外部入力装置からの入力信号を、バッファを通して信号レベルをHigh、Lowのいずれかにして、トライステートバッファに加えられたI/Oデコーダ信号に同期して、データを取り込む。  
+- 出力ポートは、トライステートバッファに加えられたI/Oデコーダの信号に同期して、データをD-FFに書き込む構造。D-FFから常にHigh、Lowの信号が出力されているので、外部装置は、独自のタイミングで信号を受け取れる。
