--- a/後期期末3.md
+++ b/後期期末3.md
@@ -165,7 +165,7 @@ K-COMで使用できる命令
   
 ## 3.2 レジスタ
 1 bitのD-FFを8個並べて同時に読み書き可能な回路  
-入出力端子は干渉しないように、トライステートバッファでデータバスに接続  
+入出力端子は干渉しないように、トライステートバッファ(**三状態**)でデータバスに接続  
 
 ## 3.3 ALUとアキュムレータ
 1. アキュムレータとメモリから8 bitのデータをALUに入力、演算結果をアキュムレータへ  
