--- a/後期期末3.md
+++ b/後期期末3.md
@@ -210,6 +210,55 @@ K-COMで使用できる命令
     - 各命令の制御手順を記憶するROM
     - 出力が制御信号となり、各回路の入出力ゲートの制御信号となる
     
+#### マイクロプログラミングとは?
+
+機械命令 (基本的な動作 「マイクロ命令」と呼ばれる)
+1. 命令の読み出し
+2. 命令の解釈
+3. 命令の実行
+
+#### 3.をより細かく
+
+3.1 オペランド - (命令の目的語)のアドレス計算  
+3.2 オペランド - データの読み出し  
+3.3 ALUの演算  
+3.4 演算結果の格納  
+4.1 次に実行すべき命令のアドレス指定 (プログラムカウンタの更新)  
+<br />
+動作 -> 詳細な基本動作に分解  
+<br />
+#### コンピュータの基本設計
+基本操作 = **マイクロ命令**  
+-> これらを組み合わせて、内部の動作などに組み立てる。  
+**操作系列(命令系列)**がマイクロプログラム  
+↓  
+マイクロプログラム制御式  
+<br/>
+### 布線論理 (Wired Logic)
+1. 実際にマイクロプログラムを使用して、**順序制御回路を設計**
+2. それを内蔵した制御装置を用いて、**CPUを構成**
+3. その場合、一般のプログラムがデータ処理を行うのに対して、マイクロプログラム制御式では、**コンピュータのハードウェアを直接マイクロプログラムで制御**
+4. メモリに格納されている**プログラム**を実行することになる  
+
+#### IBM
+システム/360  
+大型機 -> 小型機までの系列  
+アーキテクチャ上の互換性を持たせるために利用された。  
+
+#### マイクロプログラム制御方式の分類
+- 水平型マイクロ命令
+    - 制御論理記述向き
+- 垂直型マイクロ命令
+    - アルゴリズム記述向き
+
+<br />
+
+- 水平型マイクロ命令 (制御論理記述向き)
+    - 直接制御方式
+        - マイクロ命令の各ビットが処理装置内のゲートなどの制御ポイントと1対1に対応
+    - 間接制御方式 (符号化制御方式)
+        - マイクロ命令のビット数を低減するため符号化してビット数を減らす
+
 <br/>
 制御論理回路では、上位3 bitの命令コード、フラグ、マイクロコードROMが入力され、クロックに同期して、次の状態がステータスレジスタに出力される。  
 ステータスレジスタの値はデコードさえ、マイクロコードROM内に記憶された制御信号が各回路の入出六ゲートに送られる。  
