--- a/後期期末2.md
+++ b/後期期末2.md
@@ -119,7 +119,7 @@
     - メモリ上のデータを管理(使用していないデータの退避、使用可能領域の管理など)
 - ファイル管理
     - 様々なファイルシステム
-        - NFTS
+        - NTFS
         - FAT
         - exFAT
         - APFS
