--- a/後期期末4.md
+++ b/後期期末4.md
@@ -3,6 +3,11 @@
 ## 10.1 暗号化とPKI
 ### 暗号化 is 何
 データの内容を他人に分からないようにするための方法  
+### プロトコル
+- HTTP (HyperText Transport Protocol)
+    - Webアクセスのプロトコル
+- HTTPS (Hypertext Transfer Protocol Secure)
+    - HTTPの通信を安全に行うためのプロトコル
 ### 方式
 - 共通鍵暗号方式
     - 同じ鍵で暗号化して、同じ鍵を使って復号する。
@@ -57,5 +62,119 @@
 - アカウンティング (Accounting)
     - ユーザの行動を適切に記録すること
     - ログと監査のこと
+    
+### 認証の例
+- 組織の建物への入館時
+- 写真付きIDカードの提示による身元確認
+- コンピュータの利用
+- ユーザーアカウント名、パスワード入力による身元確認
+- 利用者サービスの登録時
+- 管理者の再認証
+
+### 認証の3要素
+- 記憶
+    - 本人だけが記憶している情報
+- 所持
+    - 本人だけが所持するもの
+- 生体
+    - 本人の生体 (バイオメトリクス)
+    
+→ 認証技術はこの3要素の組み合わせ  
+- 1要素認証
+- 2要素認証
+- 3要素認証
+
+### 各認証要素の特徴
+
+- 記憶
+    - 機密性が守られていることが正しい認証の前例
+    - 忘れてしまう問題点あり
+    - パスワード、パスフレーズ、PIN
+- 所持
+    - 所持するものが他人に貸されないことが前提
+    - 紛失や盗難の問題
+    - ICカード、スマートカード、ワンタイムパスワード、物理トークン
+- 生体
+    - 偽造と誤認証の問題
+    - 指紋、虹彩、顔、静脈の形
+    
+### パスワード
+- 注意点
+    - 機密性を守る
+    - 記憶での保持を避ける
+    - パスワードやシステムの漏出があった場合即変更
+    - 定期的に変更
+    - 仮パスワードはすぐ変更
+    - 個人のユーザーパスワードを共有しない
+    - 十分な長さかつ数字、記号、大文字小文字を含ませる
+    
+### ユーザー名とパスワードの扱いと強度
+- ユーザー名とパスワードの扱い
+    - 利便性とセキュリティを考慮し要求のバランスの決定
+    - ユーザー名を自分の名前の頭文字などにすると危ないよね
+    - パターン的なユーザー名は攻撃しやすい → ユーザー名の予測が簡単だから
+- 複雑なパスワードを定期的に変更
+    - → 覚えられず、付箋に書いて置いてあったら、意味ないよね (セキュリティ要件を満たしていない)
+    
+### ICカード (所持)
+- ICカードとカードリーダーを使った認証
+- 接触型(ICチップ)と非接触型(Suicaとか)がある
+- カードリーダーを使って事前に登録
+
+### バイオメトリクス (生体認証)
+- 指紋認証
+    - 手軽で高信頼性
+    - 指紋リーダー使う
+    - 偽装方法が多い問題 → 特殊なテープなど
+- 掌型
+    - 開いた手のひらを撮影、指の長さや手の厚さで認証
+    - 米国の主要な空港にある
+- 手掌スキャン
+    - 手のひらのしわ、隆線、溝で認証
+- 静脈パターン
+    - 手の甲の静脈パターンで認証
+    - 分布パターンが個人特有であるのを利用する
+- 虹彩スキャン
+    - アイリスの特徴を利用する
+- 網膜スキャン
+    - 眼球の後ろ側の網膜の血管パターンで認証
+- 顔スキャン
+    - 顔の骨格、鼻、目の幅、額の大きさ、顎などで認証
+    - 双子とかだと難しいらしい
+    - iPhoneやWindowsであるね
+- その他
+    - 声紋
+    - 署名ダイナミックス
+    - キーボードダイナミックス
+    
+### 認証の組み合わせとホットスポット
+- 所持と記憶の組み合わせなどの別要素を組み合わせる
+
+- ホットスポット
+    - セキュリティ上危険な場所
+        - キャッシュディスペンサー装置(ATMとか?)の設置場所
+        
+
 ## 10.3 ファイアウォール
+- 種類
+    - ソフトウェア型ファイアウォール
+        - サーバーやクライアントなどにインストールされているもの
+    - ハードウェア型ファイアウォール
+        - ルーターと内部ネットワークの間に設置するもの
+        
+- 何がある?
+    -  パケットフィルタリング
+        - 特定の発信元、送信先、ポートは遮断するとか
+        - 学内LANのTwitter規制とかなど → ぶっちゃけ簡単に回避できるので、パケットフィルタリングだけでは不十分
+    - DMZ (非武装地帯 DeMilitarized Zone)
+        - 信頼できる内部のネットワークとインターネット(外部ネットワーク)を分離するためのもの(だと思う)
+        
 ## 10.4 IDSとIPS
+### なにこれ
+- IDS (不正侵入**検知**システム Intrusion Detection System)
+    - 異常な通信があったとき管理者に**通知**する
+- IPS (不正侵入**防止**システム Intrusion Prevention System)
+    - 異常な通信があったとき管理者に**通知してブロックしようと**する
+    
+### 違い
+通知するだけなのか、通知に加えて遮断しようとするのかの違い
