--- a/後期期末4.md
+++ b/後期期末4.md
@@ -178,3 +178,33 @@
     
 ### 違い
 通知するだけなのか、通知に加えて遮断しようとするのかの違い
+
+## まとめ
+こんなのがありました  
+<br />
+
+- 暗号化とPKI
+    - 暗号化とは?
+    - 暗号化が利用されている状況
+    - 共通鍵暗号方式
+    - 公開鍵暗号方式
+    - RSAアルゴリズムのカギ生成、暗号化、複合化手順
+    - ハイブリッド暗号方式
+    - PKI (公開鍵基盤)
+    - CA (認証局)
+- 認証技術
+    - ユーザーアカウント管理の3要素
+    - 認証の例、3要素
+    - 各認証要素の特徴
+    - パスワード
+    - ユーザー名とパスワードの扱い
+    - ICカード
+    - バイオメトリクス
+    - 組み合わせとホットスポット
+- ファイアウォール
+    - ファイアウォールとは
+    - パケットフィルタリング
+    - DMZ
+- IDSとIPS
+    - IDS、IPSとは
+    - どう違うの
