--- a/後期期末1.md
+++ b/後期期末1.md
@@ -5,7 +5,7 @@
 - 資産  
 → 組織によって価値のあるもの  
 - 脅威  
-→ システムまたは組織に損害を与える可能性のなるインシデントの潜在的な原因  
+→ システムまたは組織に損害を与える可能性のあるインシデントの潜在的な原因  
 - 脆弱性  
 → 一つ以上の脅威が付け込むことのできる資産または管理策の弱点  
 
