--- a/後期期末3.md
+++ b/後期期末3.md
@@ -10,6 +10,8 @@
 - 主に人間の認識を調べる研究室?
 - 膨大な実験データを得てまとめる
 # 1. コンピュータ概論
+友人がソース見つけてくれたので以下に示します。  
+[CPUを作ろう　〜計算機教材とマイコンと電子工作〜 - 楽天ブログ](https://plaza.rakuten.co.jp/cpu4edu/4001/)
 ## 1.1 序論
 ## 1.2 コンピュータの構成
 ## 1.3 情報の表現とCPUのビット数
